tests/regression/errors/basic/undefined_var_4.csd
// Undefined variable test 4
vibez.spill("Using undefined:", undefined_var_4)
sus result drip = missing_variable + 4
